Add sample bitmap program for wt4090

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# IDE folders and user files
+.idea/
+*.user
+
+# Build folders
+cmake-build-debug/
+Pocket PC 2003(ARMV4)/
+
 # Prerequisites
 *.d
 
