Added freeglut submodule

--- a/id_expl0rer/app/CMakeLists.txt
+++ b/id_expl0rer/app/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(id_expl0rer)
+project(app)
 
 set(CMAKE_CXX_STANDARD 98)
 
 include_directories(src)
+include_directories()
 
-target_link_libraries(id_expl0rer-linux id_expl0rer_engine)
-target_link_libraries(id_expl0rer-wince id_expl0rer_engine)
-include_directories(id_expl0rer_engine)
+
+add_library(${PROJECT_NAME} src/main.cpp)
+target_link_libraries(${PROJECT_NAME} engine)
