--- a/id_expl0rer/engine/players/wristterm/CMakeLists.txt
+++ b/id_expl0rer/engine/players/wristterm/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(id_expl0rer)
+project(wristterm_player)
 
 set(CMAKE_CXX_STANDARD 98)
 
 include_directories(src)
 
-add_executable(id_expl0rer-wince WIN32
+add_executable(${PROJECT_NAME} WIN32
         src/gwes-sample2.cpp
         src/gwes-sample2.h
         src/resourceppc.h
@@ -14,12 +14,12 @@ add_executable(id_expl0rer-wince WIN32
         src/stdafx.h
         src/gwes-sample2ppc.rc)
 
-target_include_directories(id_expl0rer-wince
+target_include_directories(${PROJECT_NAME}
         PUBLIC "$ENV{VS90}/VC/ce/include"
         PUBLIC "$ENV{VS90}/SmartDevices/SDK/PocketPC2003/Include")
 
 
-target_compile_definitions(id_expl0rer-wince
+target_compile_definitions(${PROJECT_NAME}
         PRIVATE -D_AFXDLL
         PRIVATE _DEBUG
         PRIVATE _WIN32_WCE=0x420
@@ -37,7 +37,6 @@ target_compile_definitions(id_expl0rer-wince
 
 set(CMAKE_MFC_FLAG 1)
 
+target_link_libraries(${PROJECT_NAME} id_expl0rer_engine)
 
-target_link_libraries(id_expl0rer-linux id_expl0rer_engine)
-target_link_libraries(id_expl0rer-wince id_expl0rer_engine)
-include_directories(id_expl0rer_engine)
+include_directories(engine app)
