--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "id_expl0rer/engine/players/desktop/external/freeglut"]
-	path = id_expl0rer/engine/players/desktop/external/freeglut
-	url = https://github.com/FreeGLUTProject/freeglut.git
+[submodule "id_expl0rer/engine/players/desktop/external/sfml"]
+	path = id_expl0rer/engine/players/desktop/external/sfml
+	url = https://github.com/SFML/SFML.git
