--- a/id_expl0rer/app/CMakeLists.txt
+++ b/id_expl0rer/app/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 98)
 
 include_directories(src)
 
-add_library(${PROJECT_NAME} src/app.cpp ../engine/include/engine/app.h)
+add_library(${PROJECT_NAME} src/app.cpp ../engine/include/engine/app.h include/id_expl0rer.h)
 target_link_libraries(${PROJECT_NAME} engine)
